Correction du problème de double scroll sur la page d'édition des données

--- a/src/components/Admin/Edition/Edition.scss
+++ b/src/components/Admin/Edition/Edition.scss
@@ -4,7 +4,7 @@
 
 #edition {
     display: flex;
-    min-height: 94vh;
+    height: 94vh;
     background-color: v.$bgadmin;
     font-family: 'Roboto', sans-serif;
 }
