--- a/src/components/Admin/Edition/OrgaList/OrgaListCard/OrgaListCard.scss
+++ b/src/components/Admin/Edition/OrgaList/OrgaListCard/OrgaListCard.scss
@@ -9,7 +9,6 @@
     flex-direction: column;
     justify-content: center;
     padding-left: 1rem;
-    overflow-y: auto;
     &__name {
       font-weight: 500;
       font-size: .9rem;
