--- a/src/components/Admin/Edition/OrgaList/OrgaListSearch/OrgaListSearch.scss
+++ b/src/components/Admin/Edition/OrgaList/OrgaListSearch/OrgaListSearch.scss
@@ -13,7 +13,7 @@
 
   &-searchCard {
     position: sticky;
-    top: 6vh;
+    top: 0vh;
     display: flex;
     align-items: center;
     padding: 0 0.75rem;
